<resources>
    <string name="app_name">Medec</string>
    <string name="full_name_hint">Enter Your full Name</string>
    <string name="email_hint">Enter Your email Address</string>
    <string name="password_hint">Enter Your password</string>
    <string name="phone_hint">Enter Your phone number</string>
    <string name="register">Register</string>
    <string name="already_registered">Already Registered? Login Here</string>
    <string name="password_empty_error">Password can not be empty</string>
    <string name="password_length_error">Password should be greater than 6</string>
    <string name="email_empty_error">Email address can not be empty</string>
    <string name="user_name_empty_error">User name can not be empty</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have an account? Register Here</string>
    <string name="forgot_password">Forgot Password?</string>

    <string-array name="userRoles">
        <item>doctor</item>
        <item>patient</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="county">County</string>
    <string name="search_location_here">Search Location here</string>
    <string name="home">Home</string>
    <string name="chats">Chats</string>
    <string name="account">Account</string>
    <string name="doctor_name">Doctor\'s Name</string>
    <string name="doctor_title">Doctor\'s Title</string>
    <string name="doctor">Doctor</string>
    <string name="search_doc">Search doctor \n around you</string>
    <string name="medicines_option">Medicines</string>
    <string name="order_medicine">Order medicine \n to home</string>
    <string name="diagnostics_option">Diagnostics</string>
    <string name="book_tests">Book tests at \n door step</string>
    <string name="near_by_doctors">Doctors nearby you</string>
    <string name="see_all">See All</string>
    <string name="doctor_image">Doctor Image</string>
    <string name="doctor_location">Doctor\'s Location</string>
    <string name="user_last_message">Doctor Last Message : Hello Dear Patient, How can I help You</string>
    <string name="edit_your_profile">Edit Your profile</string>
    <string name="patient_contacts">Patient Contacts</string>
    <string name="patient_name">Patient Name</string>
    <string name="user_image">User Image</string>
    <string name="user_name">User Name</string>
    <string name="user_location">User Location</string>
    <string name="online_status">Online status</string>
    <string name="doctor_years_of_experience">Doctors Years of Experience</string>
    <string name="sample_message_time_stamp">2/10/2020 01:04 AM</string>
    <string name="save_profile">Save Profile</string>
    <string name="title_hint">Enter Your Title eg. Nursing Officer</string>
    <string name="course_hint">Enter Course Pursued</string>
    <string name="yearsOfExperience_hint">Enter years of Experience</string>
    <string name="doctor_contacts">Doctor\'s contacts</string>

</resources>