<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/doctors_list_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardElevation="5dp"
    card_view:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/doctor_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/doctor_image"
            android:src="@drawable/nurse" />

        <TextView
            android:id="@+id/doctor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/doctor_image"
            android:text="@string/doctor_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/doctor_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/doctor_name"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/doctor_image"
            android:text="@string/doctor_title" />

        <TextView
            android:id="@+id/doctor_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/doctor_title"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:text="@string/doctor_location" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
