<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:layout_gravity="center"
    app:layout_constraintTop_toBottomOf="@+id/card_profile"
    android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_nameWrapper"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        app:errorEnabled="true"
        android:hint="@string/full_name_hint"
        app:boxBackgroundMode="outline"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_fullName"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:textColor="@color/colorPrimaryDark"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_titleWrapper"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:ems="10"
        app:errorEnabled="true"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint"
        app:boxBackgroundMode="outline"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_nameWrapper"
        app:layout_constraintVertical_bias="0.050">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_doc_title"
            android:inputType="text"
            android:textColorHint="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:textColor="@color/colorPrimaryDark"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_coursePursuedWrapper"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:ems="10"
        android:layout_height="wrap_content"
        android:hint="@string/course_hint"
        app:boxBackgroundMode="outline"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_titleWrapper"
        app:layout_constraintVertical_bias="0.050">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_coursePursued"
            android:layout_width="match_parent"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:inputType="textPassword"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_phoneWrapper"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:ems="10"
        android:layout_height="wrap_content"
        android:hint="@string/phone_hint"
        app:boxBackgroundMode="outline"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_coursePursuedWrapper"
        app:layout_constraintVertical_bias="0.050">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimaryDark"
            android:inputType="text"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_yearsExperienceWrapper"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:ems="10"
        android:layout_height="wrap_content"
        android:hint="@string/yearsOfExperience_hint"
        app:boxBackgroundMode="outline"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_phoneWrapper"
        app:layout_constraintVertical_bias="0.050">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_yearsExperience"
            android:layout_width="match_parent"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:inputType="text"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_round_corners"
        android:text="@string/save_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_yearsExperienceWrapper" />

</androidx.constraintlayout.widget.ConstraintLayout>