<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/chat_doctor_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerVertical="true"
        android:contentDescription="@string/doctor_image"
        android:src="@drawable/nurse" />

    <TextView
        android:id="@+id/chat_doctor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/chat_doctor_image"
        android:text="@string/doctor_name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/doctor_last_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chat_doctor_name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:ellipsize="end"
        android:layout_toEndOf="@+id/chat_doctor_image"
        android:text="@string/doctor_last_message" />

    <TextView
        android:id="@+id/chat_doctor_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/doctor_last_message"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:text="@string/doctor_location" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/chat_doctor_image"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/chat_doctor_location"
        android:background="#BFBFBF"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/doctor_online_status"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_toEndOf="@+id/chat_doctor_image"
        android:layout_below="@+id/chat_doctor_image"
        android:layout_marginStart="-18dp"
        android:contentDescription="@string/doctor_image"
        android:src="@drawable/online_status"
        android:visibility="gone"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/doctor_offline_status"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_toEndOf="@+id/chat_doctor_image"
        android:layout_below="@+id/chat_doctor_image"
        android:layout_marginStart="-18dp"
        android:contentDescription="@string/doctor_image"
        android:src="@drawable/offline_status"
        android:visibility="gone"/>

</RelativeLayout>


